codemonitor 0.3, released on ...
================================

New features, enhancements:

  * Only redraw screen when needed

Bug fixes:

  * Make single failing job fill whole screen

codemonitor 0.2, released on 8 June 2012
========================================

New features, enhancements:

  * Make program accept configuration on stdin
  * Improve contrast of text
  * Show only one red job maximized at a time

Bug fixes:

  * Text is only rendered inside its rectangle
  * Render tabs with 4 spaces

codemonitor 0.1, released on 1 May 2012
=======================================

First version.